# jira-issue-in-commit-message-hook

./: .pre-commit-hooks.yaml  README.md  setup.cfg
hooks/: check_jira_commit.py
