# setup.cfg
[metadata]
name = jira-issue-in-commit-message
description = A pre-commit hook for checking presence of JIRA issue key in commit message.
author = Tomas Krupa
license = MIT

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    jira-issue-in-commit-message-hook = hooks.check_jira_commit:main
